--- a/task0003/css/main.css
+++ b/task0003/css/main.css
@@ -45,12 +45,14 @@ html,body {
     bottom: 0;
     left: 0;
     height: 40px;
-    width: 230px;
+    width: 229px;
     line-height: 40px;
+    background: #f2f2f2;
     background-image: url('../images/add.png');
     background-repeat: no-repeat;
     background-position: 15px 10px;
     border-top: 1px solid #cecece;
+    border-right: 1px solid #cecece;
     cursor: pointer;
 }
 
@@ -100,14 +102,17 @@ html,body {
     visibility: visible;
 }
 
+.task-list {
+    display: none;
+}
+
 .task-list li {
     padding-left: 60px;
     height: 30px;
     line-height: 30px;
     background-image: url(../images/task.png);
     background-repeat: no-repeat;
-    background-position: 40px 8px;
-}
+    background-position: 40px 8px;}
 
 .task-list li:hover {
     background-color: #fff;
@@ -194,6 +199,14 @@ html,body {
     background: #f2f2f2;
 }
 
+.editor input {
+    width: 80%;
+    font-size: 18px;
+    border-width: 0;
+    background: #f2f2f2;
+    outline: none;
+}
+
 .btn {
     float: right;
     margin-top: 10px;
@@ -229,6 +242,24 @@ html,body {
     background: #fafaee;
 }
 
+.editor .task-time input {
+    background: #fafaee;
+    width: 150px;
+}
+
 .editor .task-edit {
     padding: 17px;
+}
+
+.editor .task-edit textarea{
+    width: 100%;
+    height: 300px;
+    border-width: 0;
+    font-size: 18px;
+    outline: none;
+    background: #fff;
+}
+
+.editor .task-edit textarea:disabled{
+    background: #fff;
 }
